--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -104,7 +104,7 @@
   }
 
   #whatAreYouDoingSubsection {
-    margin: 80px 16px;
+    margin: 80px 16px 40px 16px;
 
     img {
       margin-top: 26px;
