--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -356,6 +356,23 @@
   display: none;
 }
 
+@media (min-width: 720px) and (max-width: 1024px) {
+  #casesSection {
+    padding-top: 10%;
+  }
+
+  #casesList .case {
+    width: 45%;
+    height: 256px;
+    margin: 8px;
+  }
+  #casesList .case span {
+    font-size: 2.9vw;
+  }
+  #casesList .case img {
+    filter: none;
+  }
+}
 #caseDetailsSection {
   display: none;
   flex-direction: column;
