--- a/webapp/scss/_fonts.scss
+++ b/webapp/scss/_fonts.scss
@@ -2,7 +2,7 @@ $font-stack: Montserrat, sans-serif;
 $font-size: 0.75rem;
 
 $font-size-tablet-xs: 2.7vw;
-$font-size-tablet-sm: 2.9vw; //ok
-$font-size-tablet-md: 3.1vw; //ok
-$font-size-tablet-lg: 3.6vw; //ok
+$font-size-tablet-sm: 2.9vw;
+$font-size-tablet-md: 3.1vw;
+$font-size-tablet-lg: 3.6vw;
 $font-size-tablet-xl: 3.6vw;
