--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -407,6 +407,41 @@
   border: 1px solid black;
 }
 
+@media (min-width: 720px) and (max-width: 1024px) {
+  #caseTitle {
+    font-size: 3.6vw;
+    margin: 20px 0;
+  }
+
+  #caseDescription {
+    font-size: 2.7vw;
+    text-align: center !important;
+    margin: 0 32px !important;
+  }
+
+  #techStackSubsection {
+    margin: 40px 32px;
+  }
+  #techStackSubsection #techStack {
+    font-size: 3.1vw;
+  }
+
+  #contributionsTitle {
+    margin: 0 32px !important;
+    font-size: 3.1vw;
+  }
+
+  #contributionsList li {
+    margin: 40px 32px !important;
+    font-size: 2.7vw;
+  }
+
+  #back {
+    font-size: 2.9vw;
+    margin-top: 40px !important;
+    padding: 20px !important;
+  }
+}
 #memoirsSection {
   width: 100%;
   padding-top: 20%;
@@ -533,12 +568,13 @@ section {
     flex-direction: row;
     justify-content: space-between;
   }
-  #hobbiesAndInterests .chips-section {
+
+  .chips-section {
     margin: 0px 32px;
     font-size: 2.7vw;
     width: 50%;
   }
-  #hobbiesAndInterests .chips-section .chips span {
+  .chips-section .chips span {
     margin: 13px 13px 0px 0;
     padding: 8px;
     font-size: 1.7vw;
