--- a/webapp/scss/_contact.scss
+++ b/webapp/scss/_contact.scss
@@ -1,4 +1,6 @@
+@use 'fonts';
 @use 'colors';
+@use 'breakpoints';
 
 #contactSection {
 
@@ -38,5 +40,32 @@
     color: colors.$secondary-color;
     cursor: pointer;
   }
+}
 
+@include breakpoints.tablet {
+  #contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: 0 32px;
+
+    a {
+      width: 80%;
+      justify-content: flex-start;
+      margin-bottom: 40px;
+      
+      img {
+        width: 10%;
+      }
+
+      span {
+        font-size: fonts.$font-size-tablet-xs;
+      }
+
+      li {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
