--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -84,6 +84,7 @@
   }
 
   #skillsSubsection {
+    padding: 32px;
     .skill {
       font-size: fonts.$font-size-tablet-xs;
 
@@ -104,7 +105,7 @@
   }
 
   #whatAreYouDoingSubsection {
-    margin: 80px 16px 40px 16px;
+    margin: 80px 32px 40px 32px;
 
     img {
       margin-top: 26px;
