--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -124,9 +124,11 @@ $toggle-duration: 0.3s;
 
   #menuNav {
     height: 45px;
+    padding: 24px;
 
     #language {
       font-size: fonts.$font-size-tablet-xs;
+      margin-right: 64px;
     }
   }
 
@@ -135,6 +137,7 @@ $toggle-duration: 0.3s;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    margin: 0 0 0 32px;
     
     span, input {
       display: none;
@@ -157,5 +160,4 @@ $toggle-duration: 0.3s;
       }
     }
   }
-  
 }
