feat: add desktop breakpoint to menu

--- a/webapp/scss/_breakpoints.scss
+++ b/webapp/scss/_breakpoints.scss
@@ -6,3 +6,9 @@ $breakpoint-desktop: 1024px;
     @content;
   }
 }
+
+@mixin desktop {
+  @media(min-width: #{$breakpoint-desktop}) {
+    @content;
+  }
+}
