--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -98,5 +98,11 @@ $first-impression-dimension: 52.5%;
       margin-bottom: 10%;
     }
   }
+}
+
+@include breakpoints.desktop {
+
+  #firstImpressionSection {
+  }
 
 }
