--- a/webapp/scss/_fonts.scss
+++ b/webapp/scss/_fonts.scss
@@ -6,3 +6,9 @@ $font-size-tablet-sm: 2.9vw;
 $font-size-tablet-md: 3.1vw;
 $font-size-tablet-lg: 3.6vw;
 $font-size-tablet-xl: 3.6vw;
+
+$font-size-desktop-xs: 2.0vw;
+$font-size-desktop-sm: 2.9vw;
+$font-size-desktop-md: 3.1vw;
+$font-size-desktop-lg: 3.6vw;
+$font-size-desktop-xl: 3.6vw;
