--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -138,6 +138,41 @@
     align-self: center;
   }
 }
+@media (min-width: 1024px) {
+  #menuNav {
+    height: 45px;
+    padding: 24px;
+  }
+  #menuNav #language {
+    font-size: 2vw;
+    margin-right: 64px;
+  }
+
+  #menuToggle {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 0 0 0 32px;
+  }
+  #menuToggle span, #menuToggle input {
+    display: none;
+  }
+  #menuToggle #menu {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    background: black;
+  }
+  #menuToggle #menu li, #menuToggle #menu a {
+    color: #f7f7ff;
+    font-size: 2vw;
+    padding: 0;
+    margin-right: 20px;
+    align-self: center;
+  }
+}
 #firstImpressionSection {
   display: flex;
   flex-direction: column;
