--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -4,6 +4,13 @@
 
 $first-impression-dimension: 52.5%;
 
+.first-impression-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 #firstImpressionSection {
   display: flex;
   flex-direction: column;
@@ -12,13 +19,13 @@ $first-impression-dimension: 52.5%;
   color: colors.$secondary-color;
   margin-top: 65px;
 
-  #profilePicture1 {
+  .first-impression-row > #profilePicture1 {
     width: 48%;
     height: 48%;
     margin-top: 10%;
   }
 
-  #nameAndRole {
+  .first-impression-row > #nameAndRole {
     width: $first-impression-dimension;
     margin-top: 16.46%;
     flex-direction: column;
@@ -38,7 +45,7 @@ $first-impression-dimension: 52.5%;
     }
   }
 
-  #meetMe {
+  .first-impression-row > #meetMe {
     margin: 14.02% auto;
     width: 39.02%;
     padding: 6.75% 0;
@@ -54,7 +61,7 @@ $first-impression-dimension: 52.5%;
     }
   }
 
-  #quote {
+  .first-impression-row > #quote {
     width: $first-impression-dimension * 1.5;
     display: flex;
     flex-direction: column;
@@ -67,13 +74,13 @@ $first-impression-dimension: 52.5%;
 
 @include breakpoints.tablet {
   #firstImpressionSection {
-    #profilePicture1 {
+    .first-impression-row > #profilePicture1 {
       width: 33%;
       height: 33%;
       margin-top: 10%;
     }
 
-    #nameAndRole {
+    .first-impression-row > #nameAndRole {
       margin-top: 8%;
 
       #name {
@@ -86,14 +93,14 @@ $first-impression-dimension: 52.5%;
       }
     }
 
-    #meetMe {
+    .first-impression-row > #meetMe {
       margin: 14.02% auto;
       width: 25.02%;
       padding: 4.75% 0;
       font-size: fonts.$font-size-tablet-sm;
     }
 
-    #quote {
+    .first-impression-row > #quote {
       font-size: fonts.$font-size-tablet-xs - 0.3vw;
       margin-bottom: 10%;
     }
@@ -101,8 +108,46 @@ $first-impression-dimension: 52.5%;
 }
 
 @include breakpoints.desktop {
-
   #firstImpressionSection {
-  }
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
+    #profilePicture1 {
+      order: 2;
+      width: 256px;
+      height: 256px;
+      margin: 0;
+    }
+
+    #nameAndRole {
+      order: 1;
+      margin-top: 0;
+      width: 50%;
+
+      #name {
+        font-size: fonts.$font-size-desktop-xl;
+      }
+
+      #role {
+        margin-top: 3%;
+        font-size: fonts.$font-size-desktop-md;
+      }
+    }
+
+    #meetMe {
+      order: 3;
+      margin: 0;
+      width: 19.02%;
+      padding: 4.75% 0;
+      font-size: fonts.$font-size-desktop-md;
+    }
+
+    #quote {
+      order: 4;
+      margin-bottom: 0;
+      width: auto;
+      font-size: 18px;
+    }
+  }
 }
