--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -108,22 +108,28 @@ $first-impression-dimension: 52.5%;
 }
 
 @include breakpoints.desktop {
-  #firstImpressionSection {
-    display: flex;
+  .first-impression-row {
     flex-direction: row;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 820px;
 
-    #profilePicture1 {
+    &:nth-child(2) {
+      margin-bottom: 65px;
+    }
+  }
+
+  #firstImpressionSection {
+    .first-impression-row > #profilePicture1 {
       order: 2;
       width: 256px;
       height: 256px;
-      margin: 0;
+      margin: 8% 0px 0 0;
     }
 
-    #nameAndRole {
+    .first-impression-row > #nameAndRole {
+      width: 326px;
       order: 1;
-      margin-top: 0;
-      width: 50%;
+      margin: 8% 0 0 0;
 
       #name {
         font-size: fonts.$font-size-desktop-xl;
@@ -135,19 +141,18 @@ $first-impression-dimension: 52.5%;
       }
     }
 
-    #meetMe {
-      order: 3;
-      margin: 0;
-      width: 19.02%;
-      padding: 4.75% 0;
-      font-size: fonts.$font-size-desktop-md;
+    .first-impression-row > #meetMe {
+      margin: 40px 0 0 67px;
+      width: 192px;
+      padding: 20px 0;
+      font-size: fonts.$font-size-desktop-sm;
     }
 
-    #quote {
-      order: 4;
-      margin-bottom: 0;
-      width: auto;
-      font-size: 18px;
+    .first-impression-row > #quote {
+
+      font-size: fonts.$font-size-desktop-xs - 6px;
+      margin: 40px 0 0 0;
+      width: 256px;
     }
   }
 }
