--- a/webapp/scss/_fonts.scss
+++ b/webapp/scss/_fonts.scss
@@ -10,5 +10,5 @@ $font-size-tablet-xl: 3.6vw;
 $font-size-desktop-xs: 20px;
 $font-size-desktop-sm: 22px; 
 $font-size-desktop-md: 24px; 
-$font-size-desktop-lg: 3.6vw;
+$font-size-desktop-lg: 28px;
 $font-size-desktop-xl: 48px; 
