--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -400,6 +400,63 @@
     height: 35%;
   }
 }
+@media (min-width: 1025px) {
+  .title {
+    font-size: 28px;
+  }
+
+  .description {
+    font-size: 20px;
+  }
+
+  #aboutSection {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #skillsSubsection {
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 1024px;
+  }
+  #skillsSubsection .row {
+    display: flex;
+    justify-content: space-around;
+    width: 1024px;
+    margin: 0 !important;
+  }
+  #skillsSubsection .row:nth-child(2) {
+    margin-top: 80px !important;
+  }
+  #skillsSubsection .skill {
+    font-size: 20px;
+    width: auto;
+  }
+  #skillsSubsection .skill img {
+    width: 128px;
+    height: 128px;
+  }
+  #skillsSubsection .skill p {
+    width: 256px;
+  }
+  #skillsSubsection .row:nth-child(2) {
+    margin-top: 8%;
+  }
+
+  #whatAreYouDoingSubsection {
+    margin: 80px 32px 40px 32px;
+  }
+  #whatAreYouDoingSubsection img {
+    margin-top: 26px;
+    width: 35%;
+    height: 35%;
+  }
+}
 #casesSection {
   padding-top: 18%;
   background: #f7f7ff;
