--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -119,6 +119,13 @@
       height: 35%;
     } 
   }
+
+  #hobbiesAndInterests {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 32px;
+  }
 }
 
 @include breakpoints.desktop {
@@ -177,7 +184,7 @@
   }
 
   #whatAreYouDoingSubsection {
-    margin: 80px 32px 40px 32px;
+    margin: 80px 32px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -194,5 +201,13 @@
       order: 2;
       width: 524px;
     }
+  }
+  
+  #hobbiesAndInterests {
+    width: 820px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
   }
 }
