fix: add missing cursor:pointer

--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -21,6 +21,7 @@ $toggle-duration: 0.3s;
     align-items: center;
     padding-right: 4px;
     margin-right: 32px;
+    cursor: pointer;
   }
 
   button {
