--- a/webapp/scss/_cases.scss
+++ b/webapp/scss/_cases.scss
@@ -20,6 +20,7 @@
     height: 128px;
     overflow: hidden;
     margin: 8px 0;
+    cursor: pointer;
 
     img {
       width: 100%;
@@ -68,6 +69,35 @@
 
       span {
         font-size: fonts.$font-size-tablet-sm;
+      }
+
+      img {
+        filter: none;
+      }
+    }
+  }
+
+}
+
+@include breakpoints.desktop {
+  #casesSection {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #casesList {
+    width: 820px;
+    padding: 0;
+
+    .case {
+      width: 268px;
+      height: 268px;
+      margin: 2px;
+
+      span {
+        font-size: fonts.$font-size-desktop-xs;
       }
 
       img {
