feat: add breakpoint to #casesList

--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -139,6 +139,7 @@
 
   #aboutSection {
     padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
