--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -16,6 +16,7 @@
   align-items: center;
   padding-right: 4px;
   margin-right: 32px;
+  cursor: pointer;
 }
 #menuNav button {
   background: transparent;
@@ -422,6 +423,7 @@
 
   #aboutSection {
     padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -502,6 +504,7 @@
   height: 128px;
   overflow: hidden;
   margin: 8px 0;
+  cursor: pointer;
 }
 #casesList .case img {
   width: 100%;
@@ -541,6 +544,30 @@
   }
   #casesList .case span {
     font-size: 2.9vw;
+  }
+  #casesList .case img {
+    filter: none;
+  }
+}
+@media (min-width: 1025px) {
+  #casesSection {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #casesList {
+    width: 820px;
+    padding: 0;
+  }
+  #casesList .case {
+    width: 404px;
+    height: 268px;
+    margin: 2px;
+  }
+  #casesList .case span {
+    font-size: 20px;
   }
   #casesList .case img {
     filter: none;
