--- a/webapp/scss/_casedetails.scss
+++ b/webapp/scss/_casedetails.scss
@@ -5,12 +5,23 @@
 #caseDetailsSection {
   display: none;
   flex-direction: column;
+  align-items: center;
   padding-top: 10%;
   background: colors.$secondary-color;
 
-  img {
-    width: 80%;
-    align-self: center;
+  #projectInfo {
+    display: flex;
+    flex-direction: column;
+
+    div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    #caseImage {
+      width: 80%;
+      align-self: center;
+    }   
   }
 
   #caseTitle {
@@ -42,6 +53,7 @@
     width: auto;
     background: transparent;
     border: 1px solid colors.$primary-color;
+    cursor: pointer;
   }
 
 }
@@ -83,6 +95,67 @@
     font-size: fonts.$font-size-tablet-sm;
     margin-top: 40px !important;
     padding: 20px !important;
+  }
+
+}
+
+@include breakpoints.desktop {
+
+  #caseTitle {
+    font-size: fonts.$font-size-desktop-lg;
+    margin: 20px 0;
+  }
+
+  #caseDescription {
+    font-size: fonts.$font-size-desktop-xs;
+    text-align: center !important;
+    margin: 0 32px !important;
+    width: 820px;
+  }
+
+  #caseImage {
+    width: 500px !important;
+  }
+
+  #techStackSubsection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 80px auto;
+
+    #techStack {
+      font-size: fonts.$font-size-desktop-md;
+    }
+  }
+
+  #contributionsTitle {
+    margin: 0 !important;
+    font-size: fonts.$font-size-desktop-md;
+  }
+
+  #contributionsList {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 1024px;
+
+    li {
+      width: 450px;
+      margin: 80px 31px 0 31px !important;
+      font-size: fonts.$font-size-desktop-xs - 4px !important;
+      line-height: 30px;
+
+      &:nth-child(-n+2) {
+        margin-top: 20px !important;
+      }
+    }
+  }
+
+  #back {
+    font-size: fonts.$font-size-desktop-sm;
+    margin-top: 80px !important;
+    padding: 15px !important;
   }
 
 }
