feat: change desktop-xs font-size to 16px

--- a/webapp/scss/_casedetails.scss
+++ b/webapp/scss/_casedetails.scss
@@ -143,7 +143,7 @@
     li {
       width: 450px;
       margin: 80px 31px 0 31px !important;
-      font-size: fonts.$font-size-desktop-xs - 4px !important;
+      font-size: fonts.$font-size-desktop-xs !important;
       line-height: 30px;
 
       &:nth-child(-n+2) {
