--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -149,8 +149,7 @@ $first-impression-dimension: 52.5%;
     }
 
     .first-impression-row > #quote {
-
-      font-size: fonts.$font-size-desktop-xs - 6px;
+      font-size: fonts.$font-size-desktop-xs;
       margin: 40px 0 0 0;
       width: 256px;
     }
