--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -316,7 +316,7 @@
 
 #aboutSection {
   padding-top: 20%;
-  background: #f7f7ff;
+  background: white;
 }
 
 #skillsSubsection {
@@ -710,7 +710,7 @@
 #memoirsSection {
   width: 100%;
   padding-top: 20%;
-  background: #f7f7ff;
+  background: white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
