--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -16,7 +16,7 @@
 
 #aboutSection {
   padding-top: 20%;
-  background: colors.$secondary-color;
+  background: colors.$fifth-color;
 }
 
 #skillsSubsection {
