--- a/webapp/scss/_memoirs.scss
+++ b/webapp/scss/_memoirs.scss
@@ -5,7 +5,7 @@
 #memoirsSection {
   width: 100%;
   padding-top: 20%;
-  background: colors.$secondary-color;
+  background: colors.$fifth-color;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
