fix: sections padding

--- a/webapp/scss/_cases.scss
+++ b/webapp/scss/_cases.scss
@@ -81,7 +81,7 @@
 
 @include breakpoints.desktop {
   #casesSection {
-    padding-top: 100px;
+    padding: 100px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
