--- a/webapp/scss/_memoirs.scss
+++ b/webapp/scss/_memoirs.scss
@@ -75,7 +75,7 @@
 
 @include breakpoints.desktop {
   #memoirsSection {
-    padding-top: 100px;
+    padding: 100px 0;
     flex-direction: row;
     justify-content: center;
   }
