--- a/webapp/scss/_contact.scss
+++ b/webapp/scss/_contact.scss
@@ -4,7 +4,6 @@
 
 #contactSection {
 
-  border: 1px solid black;
 
   padding-top: 10%;
   display: flex;
@@ -17,7 +16,6 @@
   margin-left: 16px;
 
   li {
-    border: 1px solid black;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -39,6 +37,10 @@
     text-decoration: none;
     color: colors.$secondary-color;
     cursor: pointer;
+
+    &:nth-child(3) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -61,6 +63,39 @@
 
       span {
         font-size: fonts.$font-size-tablet-xs;
+      }
+
+      li {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+@include breakpoints.desktop {
+  #contactSection {
+    padding: 50px 0 !important;
+  }
+
+  #contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 820px;
+    margin: 0 auto;
+
+    a {
+      width: 80%;
+      justify-content: flex-start;
+      margin-bottom: 40px;
+      
+      img {
+        width: 64px;
+        height: 64px;
+      }
+
+      span {
+        font-size: fonts.$font-size-desktop-xs;
       }
 
       li {
