fix(first_impression): line breks in portuguese/desktop version

--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -154,7 +154,7 @@ $first-impression-dimension: 52.5%;
     }
 
     .first-impression-row > #quote {
-      font-size: fonts.$font-size-desktop-xs;
+      font-size: fonts.$font-size-desktop-xs - 2px;
       margin: 40px 0 0 0;
       width: 256px;
     }
