--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -146,6 +146,7 @@ $first-impression-dimension: 52.5%;
       width: 192px;
       padding: 20px 0;
       font-size: fonts.$font-size-desktop-sm;
+      transition: background-color 0.2s ease;
 
       &:hover {
         background: colors.$secondary-color;
