--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -606,6 +606,9 @@
   text-align: justify;
   margin: 0 16px;
 }
+#caseDetailsSection #techStackSubsection {
+  margin-left: 0;
+}
 #caseDetailsSection #contributionsTitle {
   margin: 26px 16px 0 16px;
 }
@@ -637,10 +640,14 @@
   }
 
   #techStackSubsection {
-    margin: 40px 32px;
+    margin: 80px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   #techStackSubsection #techStack {
     font-size: 3.1vw;
+    text-align: center;
   }
 
   #contributionsTitle {
